--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,8 +1,28 @@
+.detailHead{
+  display: flex;
+}
+
+.backIcon {
+  width: 20rpx;
+  height: 40rpx;
+  padding-top: 70rpx;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.detailHeadText{
+  font-size: 30rpx;
+  line-height: 42rpx;
+  padding-top: 70rpx;
+  text-align: center;
+  justify-content: center; 
+}
+
 .topLine {
   width: 100%;
   height: 3rpx;
   background: #34a0e2;
-  margin-top: 130rpx;
+  margin-top: 30rpx;
 }
 
 .newsTitle {
